# test

./: azure-pipelines.yml  pyproject.toml  readme.md  setup.cfg
test/: __init__.py
