[metadata]
name = test
provides = test
description = "Test"
author = Cadair
author_email = sunpy@googlegroups.com
license = BSD 2-Clause
license_file = LICENSE.rst
platform = any
keywords = test
classifiers =
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7

[options]
python_requires = >=3.6
packages = find:
include_package_data = True
install_requires =
  numpy>=1.14.5

[options.extras_require]
tests =
  pytest<5.1
  tox
